# marker_Aruco_OpenCV_PCL

./: CMakeLists.txt  ELENCO_LIB.txt  Readme.md  aruco_simple_board.cpp  board 5-3 5cm.yml  board_6-4.yml  marker.cpp  pcd_files.rar  testo.md
cloud_viewer/: CMakeLists.txt  cloudviewer.cpp
grabber/: openni_grabber.cpp
registrazione_coppie/: CMakeLists.txt
registrazione_multipla/: CMakeLists.txt  registrazione_multipla.cpp
