cmake_minimum_required(VERSION 2.8 FATAL_ERROR)

project(registrazione_coppie)

find_package (PCL 1.2 REQUIRED)

include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})

add_executable (registrazione_coppie registrazione_coppie)

target_link_libraries (registrazione_coppie ${PCL_LIBRARIES} vtkHybrid vtkRendering aruco124 opencv_calib3d247 opencv_contrib247 opencv_core247 opencv_features2d247 opencv_flann247 opencv_gpu247 opencv_highgui247 opencv_imgproc247 opencv_legacy247 opencv_ml247 opencv_nonfree247 opencv_objdetect247 opencv_ocl247 opencv_photo247 opencv_stitching247 opencv_superres247 opencv_ts247 opencv_video247 opencv_videostab247 pcl_apps_release pcl_common_release pcl_features_release pcl_filters_release pcl_io_ply_release pcl_io_release pcl_kdtree_release pcl_keypoints_release pcl_octree_release pcl_registration_release pcl_sample_consensus_release pcl_search_release pcl_segmentation_release pcl_surface_release pcl_tracking_release pcl_visualization_release))